--- a/views/index.html
+++ b/views/index.html
@@ -28,9 +28,18 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="index.html">
-                        <SPAN class="logStyle" translate="yourhelplabdotcom"></SPAN>
-                    </a>
+                    <!-- <div class="container">
+                      <div class="row">
+                        <div class="col-lg-1 pull-left">
+                          <img src="/assets/img/bird.png" alt="log here" width="110" height="110">
+                        </div>
+                        <div class="col-lg-3 pull-right">
+                          <a class="navbar-brand" href="index.html">
+                              <SPAN class="logStyle" translate="yourhelplabdotcom"></SPAN>
+                          </a>
+                        </div>
+                      </div>
+                    </div>-->
                 </div>
                 <!-- end navbar-header -->
                 <!-- navbar-top-links -->
