--- a/public/assets/css/SearchStyle.css
+++ b/public/assets/css/SearchStyle.css
@@ -11,7 +11,20 @@ body {
     line-height: 1.5;
     padding: 0;
     margin: 0;
-    background-color: #fff;
+    
+}
+.backgroundColor{
+    /* The image used */
+    background-image: url("/assets/img/background2.jpg");
+
+    /* Full height height: 100%; */
+
+
+    /* Center and scale the image nicely */
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+
 }
 h1 {
     font-size: 2em;
