--- a/public/assets/css/login2.css
+++ b/public/assets/css/login2.css
@@ -35,7 +35,19 @@ a:active {
 	color: #fff;
 	background-color:#F44336;
 }
+.backgroundColor{
+    /* The image used */
+    background-image: url("/assets/img/background2.jpg");
 
+    /* Full height height: 100%; */
+
+
+    /* Center and scale the image nicely */
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+
+}
 /*--------------------------------------------------------------------------------
 Login page starts
 --------------------------------------------------------------------------------*/
