--- a/views/login.html
+++ b/views/login.html
@@ -26,7 +26,7 @@
        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
   </head>
-  <body ng-controller="logincontroller" class="container index">
+  <body ng-controller="logincontroller" class="container index backgroundColor">
             <div ng-hide="LoginBox" class="login box-containerLogin col-lg-4 col-md-4 col-sm-6 col-xs-6">
                       <p class="pull-right languageStyle"><span><a href="" ng-click="changeLanguage('TG')">ትግርኛ</a></span>&nbsp;&nbsp;&nbsp;||&nbsp;&nbsp;<span><a href="" ng-click="changeLanguage('EN')">English</a></span>&nbsp;||&nbsp;<span><a href="" ng-click="changeLanguage('NL')">Dutch</a></span></p><br><br><br><br>
                         <div>
@@ -134,17 +134,17 @@
                                            </select>
                                         </span>
                                        <br>
-                                          <autocomplete ng-model="country" attr-placeholder="country..." country-enter="onEnter()" click-activation="true" data="countryDatas"  on-type="fillCountry" on-select="countrySelection"></autocomplete>
-                                          <autocomplete ng-model="city" attr-placeholder=" city..." city-enter="onEnter()" click-activation="true" data="cityDatas"  on-type="fillCity" on-select="citySelection"></autocomplete>
+                                          <autocomplete ng-model="country" attr-placeholder="country..." country-enter="onEnter()" click-activation="true" data="countryDatas"  on-type="fillCountry" on-select="countrySelectionAtRegistration"></autocomplete>
+                                          <autocomplete ng-model="city" attr-placeholder=" city..." city-enter="onEnter()" click-activation="true" data="cityDatas"  on-type="fillCityAtRegistration" on-select="citySelectionAtRegistration"></autocomplete>
                                          </select>&nbsp;&nbsp;<input type="checkbox" ng-model="notStatedHere"><span translate="notStatedHere"></span>
                                          <div ng-show="notStatedHere">
+                                           <label translate="writeCityNameWhereULive"></label>
                                            <input type="text" ng-model="city" value="city.cityName">
                                          </div><br>
-                                     <button type="submit" class="btn btn-default" ng-click="register(userForm.$valid)" translate="submit">Submit</button>
+                                     <button type="submit" class="btn btn-default" ng-click="register()" translate="submit">Submit</button><br>
+                                     <a href="#" ng-click="toggle_login()" translate="alreadyHaveAccount"></a>
                                </form>
-                            <div class="signup-box">
-                              <h4><span ng-click="toggle_login()" translate="alreadyHaveAccount"></span></u></h4>
-                            </div>
+
                       </div>
             </div>
 
